# Sapphire

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  _algorithms_8hpp.html  _algorithms_8hpp_source.html  _architectures_8hpp.html  _architectures_8hpp_source.html  _atomic_8hpp.html  _atomic_8hpp_source.html  _char_8hpp.html  _char_8hpp_source.html  _chrono_8hpp.html  _chrono_8hpp_source.html  _compilers_8hpp.html  _compilers_8hpp_source.html  _condition_8hpp.html  _condition_8hpp_source.html  _config_8hpp.html  _config_8hpp_source.html  _date_time_8hpp.html  _date_time_8hpp_source.html  _debug_8hpp.html  _debug_8hpp_source.html  _engine_a_p_i_8hpp.html  _engine_a_p_i_8hpp_source.html  _except_code_8hpp.html  _except_code_8hpp_source.html  _exception_8hpp.html  _exception_8hpp_source.html  _exception___out_of_range_8hpp.html  _exception___out_of_range_8hpp_source.html  _exception_base_8hpp.html  _exception_base_8hpp_source.html  _extraction_8hpp.html  _extraction_8hpp_source.html  _flags_8hpp.html  _flags_8hpp_source.html  (+218 more)
Engine/: CMakeLists.txt
Engine/Doc/: Generate.bat  Generate.sh  doxygen.config
Engine/Include/Sapphire/: Dummy.hpp
Engine/Include/Sapphire/Collections/: Algorithms  Debug  Exceptions  Reflection  Support  Thread  Time  Types
Engine/Include/Sapphire/Core/: Config.hpp
Engine/Include/Sapphire/Core/Algorithms/: Convert.hpp  Forward.hpp  IsNull.hpp  MemCopy.hpp  MemFill.hpp  MemMove.hpp  MemReset.hpp  Move.hpp  SizeOf.hpp  Swap.hpp
Engine/Include/Sapphire/Core/Debug/: Debug.hpp  Debug.inl  Log.hpp  LogChannel.hpp  LogLevel.hpp
Engine/Include/Sapphire/Core/Misc/: Flags.hpp  Flags.inl  Flags_Internal.hpp  Flags_Internal.inl  Macro.hpp  RAII.hpp  Random.hpp  Random.inl
Engine/Include/Sapphire/Core/Reflection/: HasMember.hpp  Object.hpp  ReflectMacros.hpp  Reflector.hpp  Reflector.inl
Engine/Include/Sapphire/Core/Support/: Architectures.hpp  Compilers.hpp  EngineAPI.hpp  Platforms.hpp  Pragma.hpp  Version.hpp  Windows.hpp
Engine/Include/Sapphire/Core/Thread/: Atomic.hpp  Atomic.inl  Mutex.hpp  Thread.hpp  Thread.inl  ThreadMode.hpp
Engine/Include/Sapphire/Core/Time/: Chrono.hpp  DateTime.hpp  Hour.hpp  MilliSecond.hpp  Minute.hpp  Second.hpp  Tick.hpp  Time.hpp
Engine/Include/Sapphire/Core/Types/: Char.hpp  Char.inl  Color.hpp  IInterface.hpp  IInterface.inl  Int.hpp  Int.inl
Engine/Include/Sapphire/Editor/: Editor.hpp
Engine/Include/Sapphire/Maths/: Config.hpp
Engine/Include/Sapphire/Maths/Misc/: Degree.hpp  Degree.inl  Maths.hpp  Maths.inl  Radian.hpp  Radian.inl
Engine/Include/Sapphire/Maths/Space/: Matrix3.hpp  Matrix3.inl  Matrix4.hpp  Matrix4.inl  Quaternion.hpp  Quaternion.inl  TrComps.hpp  Transform.hpp  Transform.inl  TransformBase.hpp  TransformBase.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl
Engine/Include/Sapphire/Rendering/: APIConfig.hpp  Config.hpp
Engine/Include/Sapphire/Rendering/Framework/: IRenderInstance.hpp  RenderSurface.hpp  UniformBufferObject.hpp  UniformBuffers.hpp
Engine/Include/Sapphire/Rendering/Image/: ImageExtent.hpp  ImageViewExtent.hpp  Scissor.hpp  Viewport.hpp
Engine/Include/Sapphire/Rendering/Misc/: APISpecific.hpp  APISpecific.inl
Engine/Include/Sapphire/Rendering/Model/: Mesh.hpp  Vertex.hpp
Engine/Include/Sapphire/Rendering/Vulkan/: VkDevice.hpp  VkMacro.hpp  VkRenderInstance.hpp  VkRenderSurface.hpp  VkValidationLayers.hpp
Engine/Include/Sapphire/Rendering/Window/: GLFWWindow.hpp  IWindow.hpp
Engine/Include/Sapphire/SDK/: Config.hpp  Model.hpp
Engine/Include/Sapphire/SDK/Asset/: AssetManager.hpp
Engine/Include/Sapphire/SDK/Assets/: AssetDependency.hpp  AssetImporter.hpp  AssetManager.hpp  AssetType.hpp  IAsset.hpp  IAssetImportInfos.hpp  ResourceManager.hpp  ResourceManager.inl
Engine/Include/Sapphire/SDK/Wrappers/: StbiWrapper.hpp  TinyGLTFWrapper.hpp  TinyOBJWrapper.hpp
Engine/Include/Sapphire/Sdk/: Config.hpp  Model.hpp
Engine/Include/Sapphire/Sdk/Asset/: AssetManager.hpp
Engine/Include/Sapphire/Window/: Config.hpp  GLFWWindow.hpp  IWindow.hpp
Engine/Libs/stblib/: tiny_obj_loader.h
Engine/Resources/Models/Magikarp/: Magikarp.fbx  Magikarp.mtl
Engine/Resources/Shaders/: compile.bat  cubemap_gen.frag  cubemap_gen.vert  default.frag  default.vert  default_lit.frag  default_lit.vert  default_unlit.frag  default_unlit.vert  deferredCompo.frag  deferredFill.frag  gizmo.frag  gizmo.vert  lit.frag  lit.vert  lit_composition.frag  lit_composition.vert  skybox.frag  skybox.vert  unlit.frag  unlit.vert
Engine/Resources/Shaders/Deferred/: lit.frag  lit.vert  lit_composition.frag
Engine/Resources/Shaders/Shadow/: shadowCubemap.frag  shadowCubemap.geom  shadowCubemap.vert  shadowmap.vert
Engine/Source/Sapphire/: Dummy.cpp
Engine/Source/Sapphire/Core/Debug/: Debug.cpp  Log.cpp  LogChannel.cpp  LogLevel.cpp
Engine/Source/Sapphire/Core/Misc/: RAII.cpp  Random.cpp
Engine/Source/Sapphire/Core/Reflection/: Object.cpp  Reflector.cpp
Engine/Source/Sapphire/Core/Thread/: Mutex.cpp  Thread.cpp
Engine/Source/Sapphire/Core/Time/: Chrono.cpp  DateTime.cpp  Hour.cpp  MilliSecond.cpp  Minute.cpp  Second.cpp  Tick.cpp  Time.cpp
Engine/Source/Sapphire/Core/Types/: Color.cpp
Engine/Source/Sapphire/Editor/: Editor.cpp
Engine/Source/Sapphire/Maths/Misc/: Maths.cpp
Engine/Source/Sapphire/SDK/: Model.cpp
Engine/Source/Sapphire/Sdk/: Model.cpp
Engine/Source/Sapphire/Window/: GLFWWindow.cpp  IWindow.cpp
Engine/WIP/: MemoryBTree.cpp  MemoryBTree.hpp  MemoryHeap.cpp  MemoryHeap.hpp  MemoryHeapBase.cpp  MemoryHeapBase.hpp  MemoryHeapSegment.cpp  MemoryHeapSegment.hpp  MemoryMeta.cpp  MemoryMeta.hpp
Samples/: CMakeLists.txt
Samples/Prototype/: CMakeLists.txt  TestClass.gen  TestClass.hpp  main.cpp
Samples/Prototype/Resources/Magikarp/: Magikarp.mtl
Samples/Prototype/Resources/Spheres/: ReadMe.txt
Samples/UnitTest/: CMakeLists.txt  UnitTest.cpp  UnitTest.hpp  main.cpp
Samples/UnitTest/Tests/Maths/: Maths_tests.hpp  Matrix3_tests.hpp  Matrix4_tests.hpp  Quaternion_tests.hpp  Vector2_tests.hpp  Vector3_tests.hpp
(+571 files in other folders)
